xaml. Fix some binding issues

--- a/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
@@ -12,7 +12,7 @@
         <Controls:RadioListBox ItemsSource="{Binding Categories}"
             Focusable="False"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-            SelectedItem="{Binding Category}"
+            SelectedItem="{Binding Category, FallbackValue=null}"
             MultiSelection="{Binding CategoryMultiSelection, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CategoryChooser}}}">
 
             <Controls:RadioListBox.ItemsPanel>
