search. Add AndScope option
Apply only when AllWords is on, all words must be in one scope - eg Course.
Searcher returns Hrs with at least one word from alls - because there are
complementary Hrs in the scope.
Invert checkbox logix - any to all words.

--HG--
branch : f/SearchScope

--- a/Diagnosis.App/Resources/ConverterResources.xaml
+++ b/Diagnosis.App/Resources/ConverterResources.xaml
@@ -22,4 +22,5 @@
     <conv:InListConverter x:Key="inList" />
     <conv:HrToItemsString x:Key="hrItems" />
     <conv:NullableBooleanConverter x:Key="NullableBoolean" />
+    <conv:ScopeToLabel x:Key="ScopeToLabel" />
 </ResourceDictionary>
