--- a/Diagnosis.App/Screens/CardTree.xaml
+++ b/Diagnosis.App/Screens/CardTree.xaml
@@ -8,7 +8,7 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
              xmlns:screen="clr-namespace:Diagnosis.App.Screens"
-             xmlns:vm="clr-namespace:Diagnosis.ViewModels;assembly=Diagnosis.ViewModels"
+             xmlns:vm="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
              x:Name="card"
              mc:Ignorable="d"
              d:DataContext="{DynamicResource Context}"
