--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -1,12 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- base control styles -->
-    <Style TargetType="TextBox">
-        <Setter Property="Height" Value="23" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
+    <Style TargetType="Control" x:Key="ErrorToolTip">
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="true">
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
-    <Style TargetType="ComboBox">
+    <Style TargetType="TextBox" BasedOn="{StaticResource ErrorToolTip}">
         <Setter Property="Height" Value="23" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />        
+    </Style>
+    <Style TargetType="ComboBox" BasedOn="{StaticResource ErrorToolTip}">
+        <Setter Property="Height" Value="23" />
+    </Style>
+    <Style TargetType="DatePicker" BasedOn="{StaticResource ErrorToolTip}">
+        <Setter Property="FirstDayOfWeek" Value="Monday" />
     </Style>    
 
     <!-- buttons -->
