code. Rename Core to Common

--- a/Diagnosis.App/Controls/Editors/DateOffsetPicker.xaml
+++ b/Diagnosis.App/Controls/Editors/DateOffsetPicker.xaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:core="clr-namespace:Diagnosis.Core;assembly=Diagnosis.Core"
+             xmlns:core="clr-namespace:Diagnosis.Common;assembly=Diagnosis.Common"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              x:Class="Diagnosis.App.Controls.Editors.DateOffsetPicker"
              mc:Ignorable="d"
