--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -77,7 +77,7 @@
                 <!--DataContext is HrEditorViewModel-->
                 <editors:CategoryChooser HorizontalAlignment="Left" DataContext="{Binding DataContext, ElementName=editor}" />
             </DockPanel>
-            <DockPanel>
+            <!--<DockPanel>
                 <Label Content="дата" />
                 <editors:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}"
                                         Month="{Binding FromMonth, Mode=TwoWay}"
@@ -114,7 +114,7 @@
                         <Binding Path="DateOffset.UnitSettingStrategy" Mode="TwoWay" />
                     </ComboBox.SelectedItem>
                 </ComboBox>
-            </DockPanel>
+            </DockPanel>-->
             <!--DataContext is HrEditorViewModel-->
             <DockPanel DataContext="{Binding DataContext,ElementName=editor}"
                        Visibility="{Binding ShowIcdDiseaseSearch, Converter={StaticResource BooleanToVisibilityConverter}}">
@@ -123,10 +123,10 @@
                     <search:SearchTree DataContext="{Binding DiagnosisSearch}" />
                 </StackPanel>
             </DockPanel>
-            <DockPanel>
+            <!--<DockPanel>
                 <Label Content="комментарий" />
                 <TextBox Text="{Binding Comment}" />
-            </DockPanel>
+            </DockPanel>-->
         </StackPanel>
     </Grid>
 </UserControl>
