--- a/Diagnosis.App/Styles/TreeStyle.xaml
+++ b/Diagnosis.App/Styles/TreeStyle.xaml
@@ -83,7 +83,7 @@
         <EventSetter Event="Selected" Handler="item_selected" />
 
         <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-        <Setter Property="IsExpanded" Value="{Binding IsExpanded}" />
+        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
     </Style>
 
     <ControlTemplate TargetType="{x:Type TreeViewItem}" x:Key="treeViewItemControl">
