--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Diagnosis.App.Windows.CourseEditorWindow"
+﻿<Window x:Class="Diagnosis.App.Windows.AppointmentEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding Title}" Height="170" Width="250"         
@@ -17,16 +17,8 @@
                 <Style TargetType="Label" BasedOn="{StaticResource label90}" />
             </StackPanel.Resources>
             <DockPanel>
-                <Label Content="Начало" />
-                <DatePicker Text="{Binding Course.Start, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"  />
-            </DockPanel>
-            <DockPanel Visibility="{Binding Course.IsEnded, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <Label Content="Конец" />
-                <DatePicker Text="{Binding Course.End,  Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
-            </DockPanel>
-            <DockPanel Visibility="{Binding Course.IsEnded, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                <Label Content="" />
-                <TextBlock><Hyperlink Command="{Binding FinishCommand}">Завершить</Hyperlink></TextBlock>
+                <Label Content="Дата" />
+                <DatePicker Text="{Binding Appointment.DateAndTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
             </DockPanel>
         </StackPanel>
 
