--- a/Diagnosis.App/Screens/CardTree.xaml
+++ b/Diagnosis.App/Screens/CardTree.xaml
@@ -20,7 +20,9 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-
+    <UserControl.InputBindings>
+        <KeyBinding Modifiers="Control" Key="Enter" Command="{Binding HrList.AddHealthRecordCommand}" />
+    </UserControl.InputBindings>
 
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
